TRAC-3422 PROOF BOT Updates

--- a/src/app/features/proof-verification/components/global-storage/global-storage.component.html
+++ b/src/app/features/proof-verification/components/global-storage/global-storage.component.html
@@ -3,7 +3,7 @@
     <h6 class="text-nowrap">{{ frameData.Title ? frameData.Title : "Frame " + frameData.Id }}</h6>
   </div>
   <div class="data-table">
-    <table class="table table-hover table-borderless">
+    <table class="table table-borderless">
       <thead>
         <tr>
           <th scope="col">#</th>
