--- a/src/app/features/proof-verification/verification-screen/verification-screen.component.html
+++ b/src/app/features/proof-verification/verification-screen/verification-screen.component.html
@@ -3,7 +3,7 @@
   <div class="container mt-5">
     <div class="row mb-3">
       <div class="col-12 pl-0">
-        <h4 class="text-muted">PROOF OF THE BACKLINK</h4>
+        <h4 class="text-muted" id="proofHeaderTitle">PROOF OF THE BACKLINK</h4>
         <p>Verify the backlink of given data packets through blockchain</p>
       </div>
     </div>
@@ -24,7 +24,7 @@
       >
         <mat-spinner
           class="progress-loader"
-          [color]="primary"
+          [color]="color"
           [mode]="mode"
           [value]="value"
         >
@@ -37,16 +37,20 @@
       id="globalInformation"
       *ngIf="globalData.length > 0"
       [@screenAnimation]
-      style="height: 100%"
-      [ngStyle]="{ maxHeight: gsHeightExpand ? '96vh' : '28vh' }"
+      [ngStyle]="{
+        height: gsHeightExpand ? '98vh' : '22vh'
+      }"
     >
-      <div class="d-flex justify-content-between">
+      <!-- main -->
+      <div class="d-flex justify-content-between align-items-center">
         <div>
-          <h6>{{ StorageTitle }}</h6>
+          <h6 style="font-size: 0.848rem; margin-bottom: 0 !important;">
+            {{ StorageTitle }}
+          </h6>
         </div>
         <div (click)="resizeGlobalScreen()" style="cursor: pointer;">
           <svg
-            *ngIf="vsHeightExpand"
+            *ngIf="gsHeightExpand"
             width="20px"
             height="20px"
             viewBox="0 0 20 20"
@@ -57,7 +61,7 @@
             />
           </svg>
           <svg
-            *ngIf="!vsHeightExpand"
+            *ngIf="!gsHeightExpand"
             width="16px"
             height="16px"
             viewBox="0 0 16 16"
@@ -72,11 +76,52 @@
           </svg>
         </div>
       </div>
-      <div id="frames" [style.overflow-x]="gsOverflowX">
-        <proof-global-storage
-          *ngFor="let data of globalData"
-          [frameData]="data"
-        ></proof-global-storage>
+      <div
+        class="position-relative"
+        style=" overflow-y: hidden; height: 100%; margin-top: 4px;"
+      >
+        <button
+          type="button"
+          (click)="scrollWithinGlobalStorage('L')"
+          [ngStyle]="{ opacity: isDisableGlobalInformationL ? 0 : 1 }"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-caret-left"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M10 12.796V3.204L4.519 8 10 12.796zm-.659.753-5.48-4.796a1 1 0 0 1 0-1.506l5.48-4.796A1 1 0 0 1 11 3.204v9.592a1 1 0 0 1-1.659.753z"
+            />
+          </svg>
+        </button>
+        <button
+          type="button"
+          (click)="scrollWithinGlobalStorage('R')"
+          [ngStyle]="{ opacity: isDisableGlobalInformationR ? 0 : 1 }"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-caret-right"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"
+            />
+          </svg>
+        </button>
+        <div id="frames" [style.overflow-x]="gsOverflowX">
+          <proof-global-storage
+            *ngFor="let data of globalData"
+            [frameData]="data"
+          ></proof-global-storage>
+        </div>
       </div>
     </div>
     <!-- Verification screen -->
@@ -84,14 +129,16 @@
       id="verificationScreen"
       *ngIf="isStartDemo"
       [@screenAnimationDemo]
-      [ngStyle]="{ height: vsHeightExpand ? '96vh' : '70vh' }"
+      [ngStyle]="{ height: vsHeightExpand ? '98vh' : '75vh' }"
     >
-      <div class="d-flex justify-content-between">
+      <div class="d-flex justify-content-between align-items-center">
         <div class="d-flex justify-content-center align-items-center">
           <button
             *ngIf="isPause"
             class="btn btn-sm btn-success btnPausePlay"
             (click)="togglePlayPauseFn()"
+            data-toggle="tooltip"
+            title="Play"
           >
             <div>
               <svg
@@ -112,6 +159,8 @@
             *ngIf="!isPause"
             class="btn btn-sm btn-secondary btnPausePlay"
             (click)="togglePlayPauseFn()"
+            data-toggle="tooltip"
+            title="Pause"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -127,8 +176,10 @@
             </svg>
           </button>
           <button
-            class="btn btn-sm btn-danger btnPausePlay ml-1"
+            class="btn btn-sm btn-danger btnPausePlay ml-2"
             (click)="stopFn()"
+            data-toggle="tooltip"
+            title="Stop"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -144,8 +195,10 @@
             </svg>
           </button>
           <button
-            class="btn btn-sm btn-primary btnPausePlay ml-1"
+            class="btn btn-sm btn-info btnPausePlay ml-2"
             (click)="replayFn()"
+            data-toggle="tooltip"
+            title="Replay"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -164,32 +217,106 @@
               />
             </svg>
           </button>
-          <h6 class="ml-1 mb-0">
+          <h6
+            *ngIf="ProofContainerTitle"
+            class="ml-1 mb-0"
+            style="font-size: 0.848rem; margin-bottom: 0 !important;"
+          >
             {{ ProofContainerTitle }}
           </h6>
         </div>
+        <div class="progress mx-2" style="flex-grow: 1;">
+          <div
+            *ngIf="!isPlayCompleted"
+            class="progress-bar"
+            role="progressbar"
+            style="min-width: 48px; font-size: 11px; display: flex; justify-content: center; align-items: center;"
+            [ngStyle]="{
+              width: ((currentStep / totalSteps) * 100).toFixed(2) + '%'
+            }"
+            aria-valuenow="((currentStep / totalSteps) * 100).toFixed(2)"
+            aria-valuemin="0"
+            aria-valuemax="100"
+          >
+            {{ ((currentStep / totalSteps) * 100).toFixed(2) }}%
+          </div>
+          <div
+            *ngIf="isPlayCompleted"
+            class="progress-bar bg-success"
+            role="progressbar"
+            style="width: 100%; font-size: 12px; display: flex; justify-content: center; align-items: center;"
+            aria-valuenow="100"
+            aria-valuemin="0"
+            aria-valuemax="100"
+          >
+            Completed
+          </div>
+        </div>
         <div class="d-flex justify-content-center align-items-center">
-          <span
+          <!-- <span
             style="font-size: 14px; color: rgb(161, 159, 159);"
             class="mr-2"
           >
             {{ ((currentStep / totalSteps) * 100).toFixed(2) }}%</span
+          > -->
+          <button
+            class="btn btn-sm btn-primary btnPausePlay mr-2"
+            data-toggle="tooltip"
+            title="Playback speed"
+            (click)="selectSpeedFn()"
           >
-          <button class="btn btn-sm btn-dark btnPausePlay mr-2">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
               height="16"
               fill="currentColor"
-              class="bi bi-gear-fill"
+              class="bi bi-clock-history"
               viewBox="0 0 16 16"
             >
               <path
-                d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"
+                d="M8.515 1.019A7 7 0 0 0 8 1V0a8 8 0 0 1 .589.022l-.074.997zm2.004.45a7.003 7.003 0 0 0-.985-.299l.219-.976c.383.086.76.2 1.126.342l-.36.933zm1.37.71a7.01 7.01 0 0 0-.439-.27l.493-.87a8.025 8.025 0 0 1 .979.654l-.615.789a6.996 6.996 0 0 0-.418-.302zm1.834 1.79a6.99 6.99 0 0 0-.653-.796l.724-.69c.27.285.52.59.747.91l-.818.576zm.744 1.352a7.08 7.08 0 0 0-.214-.468l.893-.45a7.976 7.976 0 0 1 .45 1.088l-.95.313a7.023 7.023 0 0 0-.179-.483zm.53 2.507a6.991 6.991 0 0 0-.1-1.025l.985-.17c.067.386.106.778.116 1.17l-1 .025zm-.131 1.538c.033-.17.06-.339.081-.51l.993.123a7.957 7.957 0 0 1-.23 1.155l-.964-.267c.046-.165.086-.332.12-.501zm-.952 2.379c.184-.29.346-.594.486-.908l.914.405c-.16.36-.345.706-.555 1.038l-.845-.535zm-.964 1.205c.122-.122.239-.248.35-.378l.758.653a8.073 8.073 0 0 1-.401.432l-.707-.707z"
+              />
+              <path
+                d="M8 1a7 7 0 1 0 4.95 11.95l.707.707A8.001 8.001 0 1 1 8 0v1z"
+              />
+              <path
+                d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z"
               />
             </svg>
           </button>
-          <div (click)="resizeVerifyScreen()" style="cursor: pointer;">
+          <div class="dropdown mr-2" data-toggle="tooltip" title="Settings">
+            <button
+              class="btn btn-sm btn-dark btnPausePlay"
+              id="dropdownMenuButton"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-gear-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"
+                />
+              </svg>
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </div>
+          <div
+            (click)="resizeVerifyScreen()"
+            style="cursor: pointer;"
+            data-toggle="tooltip"
+            [title]="vsHeightExpand ? 'Exit Fullscreen' : 'Fullscreen'"
+          >
             <svg
               *ngIf="vsHeightExpand"
               width="20px"
@@ -224,14 +351,19 @@
             <!-- your steps here -->
             <ng-container *ngFor="let stepper of steppers">
               <div class="step">
-                <button type="button" class="step-trigger" role="tab">
+                <div
+                  type="button"
+                  class="step-trigger stepBtn"
+                  role="tab"
+                  (click)="backToStep(stepper.NO)"
+                >
                   <span class="bs-stepper-circle cs-stepper-circle">{{
                     stepper.NO
                   }}</span>
                   <span class="bs-stepper-label cs-stepper-label">{{
                     stepper.Name
                   }}</span>
-                </button>
+                </div>
               </div>
               <div class="line"></div>
             </ng-container>
@@ -247,8 +379,24 @@
           </li>
         </ul>
       </div>
-      <div id="frames" [style.overflow-x]="vsOverflowX">
-        <ng-template #ProofDemoDirective></ng-template>
+      <div
+        style="overflow: hidden;position: relative;height: 100%;width: 100%; margin-top: 4px;  
+        "
+      >
+        <div
+          *ngIf="isToast"
+          class="toast-notification float-right px-2"
+          [ngStyle]="{ top: toastTop, left: toastLeft }"
+          [@inOutAnimation]
+        >
+          <p class="m-0">{{ toastMSG }}</p>
+        </div>
+        <div class="spanner" [class.show]="isBackToStep">
+          <div class="loader"></div>
+        </div>
+        <div id="frames" [style.overflow-x]="vsOverflowX">
+          <ng-template #ProofDemoDirective></ng-template>
+        </div>
       </div>
     </div>
   </div>
