--- a/src/app/features/proof-verification/verification-screen/verification-screen.component.css
+++ b/src/app/features/proof-verification/verification-screen/verification-screen.component.css
@@ -4,7 +4,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   overflow-y: hidden;
   overflow-x: hidden;
   display: flex;
@@ -14,6 +14,7 @@
   padding: 10%;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
+  border-radius: 8px;
 }
 
 #proofDemoLoaderFrame .card:hover {
@@ -36,15 +37,43 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin-top: 2vh;
+  margin-top: 1vh;
   overflow-y: hidden;
   overflow-x: hidden;
   display: flex;
   justify-content: flex-start;
   background-color: white;
-  padding: 2%;
+  padding: 10px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
+  border-radius: 8px;
+}
+
+#globalInformation button {
+  display: none;
+  border: 1px rgba(204, 204, 204, 0.767) solid;
+  height: 100%;
+  z-index: 100;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.644);
+  left: 0;
+  top: 0;
+  /* border-radius: 8px 0px 0px 8px; */
+  padding: 0px 8px;
+}
+
+#globalInformation button:hover {
+  background-color: rgba(225, 223, 223, 0.781);
+}
+
+#globalInformation button:nth-of-type(2) {
+  left: auto;
+  right: 0px;
+  /* border-radius: 0px 8px 8px 0px; */
+}
+
+#globalInformation:hover button {
+  display: block;
 }
 
 #globalInformation .card:hover {
@@ -54,7 +83,6 @@
 #globalInformation #frames {
   height: 100%;
   width: 100%;
-  margin-top: 10px;
   overflow-y: hidden;
   display: flex;
   justify-content: flex-start;
@@ -65,15 +93,16 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin-top: 2vh;
+  margin-top: 10px;
   overflow-y: hidden;
   overflow-x: hidden;
   display: flex;
   justify-content: flex-start;
   background-color: white;
-  padding: 2%;
+  padding: 10px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
+  border-radius: 8px;
 }
 
 #verificationScreen .card:hover {
@@ -83,7 +112,6 @@
 #verificationScreen #frames {
   height: 100%;
   width: 100%;
-  margin-top: 10px;
   overflow-y: hidden;
   display: flex;
   justify-content: flex-start;
@@ -124,9 +152,14 @@
   background-color: rgb(8, 170, 21);
 }
 
+.stepBtn:focus {
+  outline: none;
+  box-shadow: none;
+}
+
 .glow .bs-stepper-circle {
   background: #4709d6;
-  box-shadow: 0 0 0 rgba(204,169,44, 0.4);
+  box-shadow: 0 0 0 rgba(204, 169, 44, 0.4);
   -webkit-animation: glow 2s infinite;
   -moz-animation: glow 2s infinite;
   animation: glow 2s infinite;
@@ -137,10 +170,10 @@
     -webkit-box-shadow: 0 0 0 0 rgba(100, 44, 204, 0.4);
   }
   70% {
-      -webkit-box-shadow: 0 0 0 10px rgba(44, 55, 204, 0);
+    -webkit-box-shadow: 0 0 0 10px rgba(44, 55, 204, 0);
   }
   100% {
-      -webkit-box-shadow: 0 0 0 0 rgba(44, 47, 204, 0);
+    -webkit-box-shadow: 0 0 0 0 rgba(44, 47, 204, 0);
   }
 }
 @keyframes glow {
@@ -149,11 +182,132 @@
     box-shadow: 0 0 0 0 rgba(47, 44, 204, 0.4);
   }
   70% {
-      -moz-box-shadow: 0 0 0 10px rgba(100, 44, 204, 0);
-      box-shadow: 0 0 0 10px rgba(44, 60, 204, 0);
+    -moz-box-shadow: 0 0 0 10px rgba(100, 44, 204, 0);
+    box-shadow: 0 0 0 10px rgba(44, 60, 204, 0);
   }
   100% {
-      -moz-box-shadow: 0 0 0 0 rgba(92, 44, 204, 0);
-      box-shadow: 0 0 0 0 rgba(145, 44, 204, 0);
+    -moz-box-shadow: 0 0 0 0 rgba(92, 44, 204, 0);
+    box-shadow: 0 0 0 0 rgba(145, 44, 204, 0);
   }
+}
+
+/* overlay */
+.wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 300px;
+  text-align: center;
+  transform: translateX(-50%);
+}
+
+.spanner {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: #f8f9fa9c;
+  border-radius: 8px;
+  width: 100%;
+  height: 100%;
+  display: block;
+  text-align: center;
+  color: #fff;
+  z-index: 1000;
+  visibility: hidden;
+}
+
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: #d8d9da;
+  visibility: hidden;
+}
+
+.loader,
+.loader:before,
+.loader:after {
+  border-radius: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation: load7 1.8s infinite ease-in-out;
+  animation: load7 1.8s infinite ease-in-out;
+}
+.loader {
+  color: #5f6164;
+  font-size: 0.44rem;
+  top: 40%;
+  left: 50%;
+  z-index: 2000;
+  position: absolute;
+  text-indent: -9999em;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.loader:before,
+.loader:after {
+  content: "";
+  position: absolute;
+  top: 0;
+}
+.loader:before {
+  left: -3.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.loader:after {
+  left: 3.5em;
+}
+@-webkit-keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
+}
+@keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
+}
+
+.show {
+  visibility: visible;
+}
+
+.spanner,
+.overlay {
+  opacity: 0;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.spanner.show,
+.overlay.show {
+  opacity: 1;
+}
+
+.toast-notification {
+  background-color: #3fc933;
+  color: white;
+  border-radius: 10px;
+  position: absolute;
+  padding: 8px 20px;
+  font-size: 13px;
+  font-weight: 400;
+  z-index: 4000;
 }
