--- a/src/app/features/search-page/card/card.component.html
+++ b/src/app/features/search-page/card/card.component.html
@@ -86,7 +86,7 @@
               <span class="fieldStyle" >Type : </span>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-7 col-lg-9 col-xl-9">
-              <span class="cardcontent">{{transactionData.transferType | titlecase}}</span>
+              <span class="cardcontent">{{transactionData.transferType}}</span>
             </div>
           </div>
           <div class="row contentMargin"  *ngIf="transactionData.timestamp">
