--- a/src/app/features/proof-verification/verification-screen/verification-screen.component.css
+++ b/src/app/features/proof-verification/verification-screen/verification-screen.component.css
@@ -43,8 +43,8 @@
   display: flex;
   justify-content: flex-start;
   background-color: white;
-  padding: 10px;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  /* padding: 10px; */
+  /* box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2); */
   transition: 0.3s;
   border-radius: 8px;
 }
@@ -80,7 +80,7 @@
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-#globalInformation #frames {
+#globalInformation #gsFrames {
   height: 100%;
   width: 100%;
   overflow-y: hidden;
@@ -136,12 +136,99 @@
   align-items: center;
 }
 
+.dropdown-menu {
+  min-width: auto !important;
+  font-size: 12px !important;
+  padding: 0 !important;
+  cursor: pointer;
+}
+
+.dropdown-toggle::after {
+  display: none !important;
+  margin-left: 0.255em;
+  vertical-align: 0.255em;
+  content: "";
+  border-top: 0.3em solid;
+  border-right: 0.3em solid transparent;
+  border-bottom: 0;
+  border-left: 0.3em solid transparent;
+}
+
+.dropdown-item {
+  cursor: pointer;
+}
+
+.dropdown-menu a:focus {
+  background-color: #007bff !important;
+  color: #fdfcfc !important;
+}
+
+.dropdown-menu .active {
+  background-color: #007bff;
+  color: #fdfcfc;
+}
+
+.steppersMenu {
+  position: absolute;
+  z-index: 4000;
+  left: -20px;
+  top: 20%;
+}
+
+#steppersFrame {
+  height: inherit;
+  position: absolute;
+  background: #fdfcfc;
+  transition: 1200ms ease-in-out;
+  z-index: 1;
+  /* left: 0; */
+  left: -120%;
+  display: flex;
+  max-width: 100%;
+  align-items: flex-start;
+  justify-items: flex-start;
+}
+
+.steppersShow {
+  left: 0 !important;
+}
+
 .cs-stepper-label {
-  font-size: 10px !important;
+  font-size: 11px !important;
 }
 
 .cs-stepper-circle {
   font-size: 10px !important;
+}
+
+.cs-stepper-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 0px !important;
+  margin: 0px !important;
+}
+
+.cs-stepper-header .step {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: max-content;
+  /* background: rgba(18,102,241,.05); */
+}
+
+.cs-stepper-header .step button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.cs-stepper-header .line {
+  margin-left: 24px;
+  min-width: 2.4px;
 }
 
 .cs-stepper-header .line:last-child {
@@ -150,6 +237,16 @@
 
 .success .bs-stepper-circle {
   background-color: rgb(8, 170, 21);
+}
+
+.stepBtn {
+  margin: 0 !important;
+  width: 100% !important;
+  justify-content: flex-start;
+  padding: 10px !important;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 
 .stepBtn:focus {
