--- a/src/app/features/proofs/poe/proof-poe.component.html
+++ b/src/app/features/proofs/poe/proof-poe.component.html
@@ -172,7 +172,7 @@
           <div class="row align-self-center"  *ngFor="let subItem of item.value  | keyvalue" style="overflow-y: auto; "> 
             <div class="col-sm-12 col-md-6 col-lg-6 align-item-center" style=" font-size: 14px; font-weight:420; overflow-wrap:break-word; "
              *ngIf="item.key != 'photos'">
-              <p>{{subItem.key}} :</p> 
+              <p>  {{CapitalFirstLetterAndPutSpace(subItem.key)}} :</p> 
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6 align-item-center" style=" font-size: 14px; overflow-y: auto;  overflow-wrap:normal;"  *ngIf="item.key != 'photos'" >
               <p>  {{subItem.value }}</p>
