--- a/src/app/features/skeleton-view/home-skeleton/home-skeleton.component.html
+++ b/src/app/features/skeleton-view/home-skeleton/home-skeleton.component.html
@@ -1,20 +1,5 @@
-<div class="row mt-4">
-    <div class="col-12 ">
-        <div class="row">
-            <div class="col-6">
-                <ngx-skeleton-loader count="1" appearance="line" [theme]="{ 
-        'border-radius': '5px',
-        height: '35px',
-        'background-color': '#E3EDF4',
-        border: '1px solid white'
-      }"></ngx-skeleton-loader>
-            </div>
-        </div>
-    </div>
-</div>
-<div>
-    <div   *ngFor="let index of [0,1,2,3,4]" class="card cardshadow p-3 mt-1 mb-4">
-    <div class="row cardMargin no-gutters">
+<div   *ngFor="let index of [0,1,2,3,4]" class="card cardshadow  p-3 mt-1 mb-4" style="display: flex; justify-content: center; align-self: center;">
+    <div class="row cardMargin no-gutters ">
     <div class="col-xs-12 col-sm-7 col-md-9 col-lg-10 col-xl-10 ">
         <div class="row  item">
             <div class="col-xs-12 col-sm-5 col-md-5 col-lg-2 col-xl-3 ">
@@ -98,9 +83,7 @@
                 'background-color': '#E3EDF4',
                 border: '1px solid white'
               }"></ngx-skeleton-loader>
-            <!-- above line will produce the rendering of 5 circles with the pulse animation and the aria-valuetext attribute set with "This item is actually loading..." -->
         </div>
     </div>
-</div>
 </div>
 </div>
